crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_checked_integer_arithmetic.rs
fn arithmetic() {
    let y = 1_i32 + 1_i32;
    //@ assert "{y} == 2"
}

fn main() {}
