crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_non_binding_interpolation.rs
fn main() {
    let x = 1i32;
    //@ assert {x + 1i32} == 2i32;
}
